--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "description": "React and Electron Awesome App",
   "main": "public/electron.js",
-  "homepage":".",
+  "homepage": ".",
   "scripts": {
     "dev": "nf start",
     "start": "react-scripts start",
@@ -17,20 +17,17 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "electron": "electron .",
-    "ebuild": "yarn build && node_modules/.bin/build",
-    "zlbuild": "yarn build && electron-packager . appname"
+    "ebuild": "yarn build && node_modules/.bin/build"
   },
   "devDependencies": {
     "asar": "^0.14.3",
     "electron": "^2.0.5",
-    "electron-builder": "^20.22.0",
-    "electron-packager": "^12.1.0"
+    "electron-builder": "^20.22.0"
   },
   "build": {
     "productName": "React Electrion App",
     "files": [
-      "build/**/*",
-      "electron/*"
+      "build/**/*"
     ]
   }
 }
